--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -297,137 +297,7 @@
   </mat-tab>
 
   <mat-tab label="ניהול משימות">
-    <div class="content" dir="ltr">
-      <div class="left-content">
-        <div class="tasks-table">
-          <h2 class="table-title">משימות</h2>
-          <!-- Add Task Button -->
-          <button
-            mat-fab
-            color="primary"
-            class="add-task-btn"
-            (click)="openAddTaskDialog()"
-          >
-            <mat-icon>add</mat-icon>
-          </button>
-          <mat-table
-            [dataSource]="todoListDataSource"
-            matSort
-            dir="rtl"
-            class="mat-elevation-z8"
-          >
-            <!-- Dynamically create each column based on the columns array -->
-            <ng-container
-              *ngFor="let column of columns"
-              [matColumnDef]="column"
-            >
-              <mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ getColumnLabel(column) }}
-              </mat-header-cell>
-              <mat-cell *matCellDef="let element">
-                <ng-container [ngSwitch]="column">
-                  <!-- Custom case for each column as needed -->
-                  <ng-container *ngSwitchCase="'creationDate'">{{
-                    element[column] | date : "dd/MM/yyyy HH:mm"
-                  }}</ng-container>
-                  <ng-container *ngSwitchCase="'dueDate'">{{
-                    element[column] | date : "dd/MM/yyyy HH:mm"
-                  }}</ng-container>
-                  <ng-container *ngSwitchCase="'timeLeft'">
-                    <span
-                      [class.bold-font]="
-                        isLessThan25Hours(element.dueDate, element.status)
-                      "
-                    >
-                      {{ getTimeLeft(element.dueDate, element.status) }}
-                    </span>
-                  </ng-container>
-                  <!-- Default display for other columns -->
-                  <ng-container *ngSwitchDefault>{{
-                    element[column]
-                  }}</ng-container>
-                </ng-container>
-              </mat-cell>
-            </ng-container>
-            <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-            <mat-row
-              *matRowDef="let row; columns: columns"
-              [ngClass]="{
-                'priority-1': row.status === 'new',
-                'priority-3': row.status === 'In Progress',
-                'priority-2': row.status === 'Completed',
-                'bold-font': isLessThan25Hours(row.dueDate, row.status)
-              }"
-              class="mat-row"
-            ></mat-row>
-          </mat-table>
-
-          <mat-paginator
-            #todoListPaginator="matPaginator"
-            [pageSizeOptions]="[10, 20, 50]"
-          ></mat-paginator>
-        </div>
-      </div>
-      <div class="right-content">
-        <div class="tasks-table">
-          <h2 class="table-title">משימות</h2>
-          <!-- Add Task Button -->
-
-          <mat-table
-            [dataSource]="TaskSummeryDataSource"
-            matSort
-            dir="rtl"
-            class="mat-elevation-z8"
-          >
-            <!-- Define columns -->
-            <ng-container matColumnDef="adUserName">
-              <mat-header-cell *matHeaderCellDef mat-sort-header
-                >שם משתמש
-              </mat-header-cell>
-              <mat-cell *matCellDef="let row">{{ row.adUserName }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="new">
-              <mat-header-cell *matHeaderCellDef mat-sort-header
-                >חדש</mat-header-cell
-              >
-              <mat-cell *matCellDef="let row"   [ngClass]="
-              row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
-            ">{{ row.new }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="inProgress">
-              <mat-header-cell *matHeaderCellDef mat-sort-header
-                >בתהליך</mat-header-cell
-              >
-              <mat-cell *matCellDef="let row"   [ngClass]="
-              row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
-            ">{{ row.inProgress }}</mat-cell>
-            </ng-container>
-
-            <ng-container matColumnDef="completed">
-              <mat-header-cell *matHeaderCellDef mat-sort-header
-                >הושלם</mat-header-cell
-              >
-              <mat-cell
-                *matCellDef="let row"
-                [ngClass]="
-                  row.completed > 0 ? 'bold-font-red' : 'bold-font-blue'
-                "
-              >
-                {{ row.completed }}</mat-cell
-              >
-            </ng-container>
-
-            <!-- Set up columns to display -->
-            <mat-header-row
-              *matHeaderRowDef="displayedColumns"
-            ></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-          </mat-table>
-        </div>
-      </div>
-    </div>
+    <app-tab2></app-tab2>
   </mat-tab>
   <mat-tab label="ניהול הודעות"> Content 3 </mat-tab>
 </mat-tab-group>
