--- a/src/app/admin-dashboard/tab2/tab2.component.scss
+++ b/src/app/admin-dashboard/tab2/tab2.component.scss
@@ -54,7 +54,7 @@
   
   /* Task table styling */
   .tasks-table {
-    height: 50vh;
+    height: 90%;
     overflow-y: auto;
     flex: 1;
     margin-right: 1%;
