--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -322,7 +322,7 @@
   
   /* Container for all messages including the title */
   .messages-container {
-   width: 100%;
+    width: 100%;
     border: 2px solid #ccc; /* Border around the entire container */
     padding: 2px;
     box-sizing: border-box;
@@ -470,6 +470,6 @@ canvas {
 .chart-container {
   width: 100%; // Full width of its parent to utilize the space efficiently
   // Adjust height based on the space left after other contents within important-messages-cards
-  height: auto; // Example, adjust based on your actual layout and space available
+  height: 300px; // Example, adjust based on your actual layout and space available
   margin-bottom: 20px; // Provides spacing between the chart and any following content
 }
