--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -122,7 +122,7 @@
 
           <div class="important-messages-cards" dir="rtl">
             <div class="messages-container">
-              <h2 class="important-messages-title">הודעות חשובות</h2>
+              <h2 class="important-messages-title">גרפים </h2>
 
               <!-- <div class="message-cards-container">
                 <mat-card
@@ -158,7 +158,7 @@
                     <canvas id="monthlyChart" #monthlyChartCanvas></canvas>
                   </div>
                 </mat-tab>
-                <mat-tab label="קריאות גרף שנתי">
+                   <mat-tab label="קריאות גרף שנתי">
                   <div class="chart-container">
                     <canvas id="yearlyChart" #yearlyChartCanvas></canvas>
                   </div>
