--- a/src/app/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/admin-dashboard/admin-dashboard.component.scss
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding: 10px;
+    padding: 1px;
     box-sizing: border-box;
   }
   
@@ -57,14 +57,14 @@
     height: 45vh;
     overflow-y: auto;
     flex: 1;
-    margin-right: 1%;
+    margin-right: 10px;
     border: 2px solid #ccc;  
   }
   
   /* Table row styling */
   table {
-    width: 95%;
-    margin: 20px auto;
+    width: 100%;
+    //margin: 10px auto;
   }
   
   // .mat-row:nth-child(odd) {
@@ -79,7 +79,10 @@
     background-color: darkgray;
     cursor: pointer;
   }
-  
+  .mat-mdc-tab{
+    font-size: 10px;
+    height: 20px;
+  }
   /* Cards styling */
   .cards {
     display: flex;
@@ -90,8 +93,7 @@
     overflow-y: auto; /* Scroll if content exceeds the container's height */
     width: 100%; /* Take the full width of its parent container */
     border: 2px solid #ccc;
-    padding: 2px; /* Padding inside the cards container */
-  }
+    margin-right: 10px  }
   
   /* Individual card styling */
   .card {
@@ -108,6 +110,7 @@
     align-items: center;
     font-weight: bolder;
     color: #090808;
+    
   }
   
   /* Card value colors */
@@ -130,7 +133,7 @@
     .tasks-table,
     .cards {
       width: 100%;
-      margin-right: 0;
+      //margin-right: 0;
     }
     
     .card {
@@ -314,8 +317,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+   // margin-right: 10px;
     width: 100%; /* Takes full width of its container */
+   padding-right: 10px;
+   padding-top: 10px;
   }
   
   /* Container for all messages including the title */
@@ -469,5 +474,5 @@ canvas {
   width: 100%; // Full width of its parent to utilize the space efficiently
   // Adjust height based on the space left after other contents within important-messages-cards
   height: 300px; // Example, adjust based on your actual layout and space available
-  margin-bottom: 20px; // Provides spacing between the chart and any following content
+  margin-bottom: 5px; // Provides spacing between the chart and any following content
 }
