--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -9,7 +9,7 @@
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
-
+<div class="dashboard">
 <mat-tab-group dir="rtl">
   <mat-tab label="ראשי">
     <div class="dashboard" dir="ltr">
@@ -318,3 +318,4 @@
   </mat-tab>
   <mat-tab label="ניהול הודעות"> Content 3 </mat-tab>
 </mat-tab-group>
+</div>
