--- a/src/app/serviceCalls/service-calls-screen-it/service-calls-screen-it.component.html
+++ b/src/app/serviceCalls/service-calls-screen-it/service-calls-screen-it.component.html
@@ -3,6 +3,127 @@
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
 <div class="body">
+    <div class="top-right-container">
+        <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
+          <mat-icon>home</mat-icon>
+        </button>
+      </div>
+      <div class="nine">
+        <h1>
+          {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
+        </h1>
+      </div>
+    
+      <form [formGroup]="filterForm" dir="rtl" class="filter-form">
+        <div class="container-fluid mb-2">
+          <div class="row search-count">
+            <div class="col">
+              <div dir="rtl" class="card">
+                <div dir="rtl" class="card-body">
+                  <ng-container *ngFor="let column of columns; let i = index">
+                    <!-- Check if the index is a multiple of 4 to start a new row -->
+                    <div class="filter-row" *ngIf="i % 4 === 0">
+                      <!-- Filter fields go here -->
+                    </div>
+    
+                    <mat-form-field
+                      class="filter-field"
+                      *ngIf="column == 'departName'"
+                    >
+                      <mat-label class="filters">{{
+                        getColumnLabel(column)
+                      }}</mat-label>
+                      <input
+                        type="text"
+                        matInput
+                        [formControl]="getFormControl(column)"
+                        [matAutocomplete]="auto"
+                      />
+    
+                      <mat-autocomplete #auto="matAutocomplete">
+                        <mat-option
+                          *ngFor="let option of filteredResponsibilities | async"
+                          [value]="option"
+                        >
+                          {{ option }}
+                        </mat-option>
+                      </mat-autocomplete>
+                    </mat-form-field>
+                    <mat-form-field
+                      *ngIf="column !== 'departName'"
+                      class="filter-field"
+                    >
+                      <mat-label class="filters">{{
+                        getColumnLabel(column)
+                      }}</mat-label>
+                      <div
+                        *ngIf="column !== 'insert_time' && column !== 'update_time'"
+                      >
+                        <input
+                          matInput
+                          [formControl]="getFormControl(column)"
+                          class="filter-input"
+                        />
+    
+                        <div class="name-select-wrapper">
+                          <mat-select
+                            *ngIf="column === 'ssP_DESCRIPTION'"
+                            [formControl]="getFormControl(column)"
+                            class="name-select"
+                          >
+                            <mat-option
+                              *ngFor="let option of answerTextOptions"
+                              [value]="option"
+                            >
+                              {{ option }}
+                            </mat-option>
+                          </mat-select>
+                        </div>
+                      </div>
+    
+                      <div
+                        *ngIf="column == 'insert_time' || column == 'update_time'"
+                        #datepicker
+                        class="datepicker-field"
+                      >
+                        <input
+                          matInput
+                          [formControl]="getFormControl(column)"
+                          [matDatepicker]="picker"
+                          dir="rtl"
+                        />
+                        <mat-datepicker-toggle
+                          matSuffix
+                          [for]="picker"
+                        ></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                      </div>
+                    </mat-form-field>
+                  </ng-container>
+                </div>
+                <div class="reset-button-container">
+                  <button
+                    mat-button
+                    (click)="resetFilters()"
+                    mat-raised-button
+                    color="primary"
+                    class="custom-button"
+                    matTooltip="Reset Filters"
+                  >
+                    <i class="material-icons">refresh</i>
+                    <!-- Icon for reset -->
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          dir="rtl"
+          style="display: flex; justify-content: space-between; align-items: center"
+        >
+        </div>
+      </form>
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
     <div class="container-fluid mb-2">
       <div class="row search-count">
