--- a/src/app/consiliums/consiliums.component.html
+++ b/src/app/consiliums/consiliums.component.html
@@ -1,20 +1,187 @@
-<!-- app.component.html -->
+<link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/icon?family=Material+Icons"
+/>
+<div class="body">
+  <div class="top-right-container">
+    <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
+      <mat-icon>home</mat-icon>
+    </button>
+  </div>
+  <div class="nine">
+    <h1>
+      {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
+    </h1>
+  </div>
 
-<form  [formGroup]="filterForm">
-  <mat-form-field *ngFor="let column of columns" appearance="fill">
-    <mat-label class="filters">{{ column }}</mat-label>
-    <input matInput [formControlName]="column" />
-  </mat-form-field>
-</form>
-<!-- <button mat-raised-button color="primary" (click)="applyFilters()">Apply Filters</button> -->
-<mat-table [dataSource]="filteredData" matSort>
-  <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-    <mat-header-cell *matHeaderCellDef mat-sort-header>
-      {{ column }}
-    </mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
-  </ng-container>
+  <form [formGroup]="filterForm" dir="rtl" class="filter-form">
+    <div class="container-fluid mb-2">
+      <div class="row search-count">
+        <div class="col">
+          <div dir="rtl" class="card">
+            <div dir="rtl" class="card-body">
+              <ng-container *ngFor="let column of columns; let i = index">
+                <!-- Check if the index is a multiple of 4 to start a new row -->
+                <div class="filter-row" *ngIf="i % 4 === 0">
+                  <!-- Filter fields go here -->
+                </div>
 
-  <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: columns"></mat-row>
-</mat-table>
+                <mat-form-field
+                  class="filter-field"
+                  *ngIf="column == 'departName'"
+                >
+                  <mat-label class="filters">{{
+                    getColumnLabel(column)
+                  }}</mat-label>
+                  <input
+                    type="text"
+                    matInput
+                    [formControl]="getFormControl(column)"
+                    [matAutocomplete]="auto"
+                  />
+
+                  <mat-autocomplete #auto="matAutocomplete">
+                    <mat-option
+                      *ngFor="let option of filteredResponsibilities | async"
+                      [value]="option"
+                    >
+                      {{ option }}
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
+                <mat-form-field
+                  *ngIf="column !== 'departName'"
+                  class="filter-field"
+                >
+                  <mat-label class="filters">{{
+                    getColumnLabel(column)
+                  }}</mat-label>
+                  <div
+                    *ngIf="column !== 'insert_time' && column !== 'update_time'"
+                  >
+                    <input
+                      matInput
+                      [formControl]="getFormControl(column)"
+                      class="filter-input"
+                    />
+
+                    <div class="name-select-wrapper">
+                      <mat-select
+                        *ngIf="column === 'ssP_DESCRIPTION'"
+                        [formControl]="getFormControl(column)"
+                        class="name-select"
+                      >
+                        <mat-option
+                          *ngFor="let option of answerTextOptions"
+                          [value]="option"
+                        >
+                          {{ option }}
+                        </mat-option>
+                      </mat-select>
+                    </div>
+                  </div>
+
+                  <div
+                    *ngIf="column == 'insert_time' || column == 'update_time'"
+                    #datepicker
+                    class="datepicker-field"
+                  >
+                    <input
+                      matInput
+                      [formControl]="getFormControl(column)"
+                      [matDatepicker]="picker"
+                      dir="rtl"
+                    />
+                    <mat-datepicker-toggle
+                      matSuffix
+                      [for]="picker"
+                    ></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                  </div>
+                </mat-form-field>
+              </ng-container>
+            </div>
+            <div class="reset-button-container">
+              <button
+                mat-button
+                (click)="resetFilters()"
+                mat-raised-button
+                color="primary"
+                class="custom-button"
+                matTooltip="Reset Filters"
+              >
+                <i class="material-icons">refresh</i>
+                <!-- Icon for reset -->
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div
+      dir="rtl"
+      style="display: flex; justify-content: space-between; align-items: center"
+    >
+      <mat-form-field
+        class="long-search-bar"
+        style="flex: 1; padding-right: 10px"
+      >
+        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
+        <input
+          matInput
+          [formControlName]="'globalFilter'"
+          class="search-input"
+        />
+      </mat-form-field>
+      <div class="graph-button-container">
+        <img
+          (click)="navigateToGraphPage()"
+          matTooltip="Move To Graph"
+          src="../../../../assets/graphIcon.png"
+          width="50px"
+        />
+      </div>
+      <div class="icon" matTooltip="Download Excel">
+        <img
+          src="../../assets/excel.png"
+          alt="Download"
+          (click)="exportToExcel()"
+          class="download-icon"
+          width="50px"
+        />
+      </div>
+    </div>
+  </form>
+  <app-sys-graph *ngIf="showGraph" [graphData]="graphData"></app-sys-graph>
+
+  <mat-table
+    *ngIf="!showGraph"
+    [dataSource]="matTableDataSource"
+    matSort
+    dir="rtl"
+    class="mat-elevation-z8"
+  >
+    <!-- Loop through columns to define each column in the table -->
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel(column) }}
+        <!-- Use the function to get display-friendly labels -->
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
+    </ng-container>
+
+    <!-- Define the header row -->
+    <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+    <!-- Define the data row -->
+    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+  </mat-table>
+
+  <!-- Define the paginator with page size options -->
+  <mat-paginator
+    [length]="matTableDataSource.paginator?.length || 0"
+    [pageIndex]="matTableDataSource.paginator?.pageIndex"
+    [pageSize]="matTableDataSource.paginator?.pageSize"
+    [pageSizeOptions]="[15, 50, 100]"
+  ></mat-paginator>
+</div>
+
