--- a/src/app/serviceCalls/service-calls-screen-it/service-calls-screen-it.component.html
+++ b/src/app/serviceCalls/service-calls-screen-it/service-calls-screen-it.component.html
@@ -1,129 +1,24 @@
+<mat-toolbar color="primary">
+    <img
+      src="../../../assets/poria icon.jpg"
+      height="50"
+      alt="Logo"
+      class="header-logo"
+    />
+    <span class="toolbar-spacer"></span>
+    <span class="header-name">{{loginUserName}}</span>
+  </mat-toolbar>
+
+  
+
 <link
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
 <div class="body">
-    <div class="top-right-container">
-        <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
-          <mat-icon>home</mat-icon>
-        </button>
-      </div>
-      <div class="nine">
-        <h1>
-          {{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
-        </h1>
-      </div>
+
     
-      <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-        <div class="container-fluid mb-2">
-          <div class="row search-count">
-            <div class="col">
-              <div dir="rtl" class="card">
-                <div dir="rtl" class="card-body">
-                  <ng-container *ngFor="let column of columns; let i = index">
-                    <!-- Check if the index is a multiple of 4 to start a new row -->
-                    <div class="filter-row" *ngIf="i % 4 === 0">
-                      <!-- Filter fields go here -->
-                    </div>
-    
-                    <mat-form-field
-                      class="filter-field"
-                      *ngIf="column == 'departName'"
-                    >
-                      <mat-label class="filters">{{
-                        getColumnLabel(column)
-                      }}</mat-label>
-                      <input
-                        type="text"
-                        matInput
-                        [formControl]="getFormControl(column)"
-                        [matAutocomplete]="auto"
-                      />
-    
-                      <mat-autocomplete #auto="matAutocomplete">
-                        <mat-option
-                          *ngFor="let option of filteredResponsibilities | async"
-                          [value]="option"
-                        >
-                          {{ option }}
-                        </mat-option>
-                      </mat-autocomplete>
-                    </mat-form-field>
-                    <mat-form-field
-                      *ngIf="column !== 'departName'"
-                      class="filter-field"
-                    >
-                      <mat-label class="filters">{{
-                        getColumnLabel(column)
-                      }}</mat-label>
-                      <div
-                        *ngIf="column !== 'insert_time' && column !== 'update_time'"
-                      >
-                        <input
-                          matInput
-                          [formControl]="getFormControl(column)"
-                          class="filter-input"
-                        />
-    
-                        <div class="name-select-wrapper">
-                          <mat-select
-                            *ngIf="column === 'ssP_DESCRIPTION'"
-                            [formControl]="getFormControl(column)"
-                            class="name-select"
-                          >
-                            <mat-option
-                              *ngFor="let option of answerTextOptions"
-                              [value]="option"
-                            >
-                              {{ option }}
-                            </mat-option>
-                          </mat-select>
-                        </div>
-                      </div>
-    
-                      <div
-                        *ngIf="column == 'insert_time' || column == 'update_time'"
-                        #datepicker
-                        class="datepicker-field"
-                      >
-                        <input
-                          matInput
-                          [formControl]="getFormControl(column)"
-                          [matDatepicker]="picker"
-                          dir="rtl"
-                        />
-                        <mat-datepicker-toggle
-                          matSuffix
-                          [for]="picker"
-                        ></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                      </div>
-                    </mat-form-field>
-                  </ng-container>
-                </div>
-                <div class="reset-button-container">
-                  <button
-                    mat-button
-                    (click)="resetFilters()"
-                    mat-raised-button
-                    color="primary"
-                    class="custom-button"
-                    matTooltip="Reset Filters"
-                  >
-                    <i class="material-icons">refresh</i>
-                    <!-- Icon for reset -->
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div
-          dir="rtl"
-          style="display: flex; justify-content: space-between; align-items: center"
-        >
-        </div>
-      </form>
+     
   <form [formGroup]="filterForm" dir="rtl" class="filter-form">
     <div class="container-fluid mb-2">
       <div class="row search-count">
@@ -168,28 +63,24 @@
   </form>
   <!-- <app-sys-graph *ngIf="showGraph" [graphData]="graphData"></app-sys-graph> -->
 
-  <mat-table
-    *ngIf="!showGraph"
-    [dataSource]="matTableDataSource"
-    matSort
-    dir="rtl"
-    class="mat-elevation-z8"
-  >
-    <!-- Loop through columns to define each column in the table -->
+  <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
     <ng-container *ngFor="let column of columns" [matColumnDef]="column">
       <mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ getColumnLabel(column) }}
-        <!-- Use the function to get display-friendly labels -->
       </mat-header-cell>
-      <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
+      <mat-cell *matCellDef="let element">
+        <ng-container *ngIf="column === 'timeOpened' || column === 'timeClosed'; else otherColumns">
+          {{ element[column] | date:'yyyy-MM-dd HH:mm' }}
+        </ng-container>
+        <ng-template #otherColumns>{{ element[column] }}</ng-template>
+      </mat-cell>
     </ng-container>
-
-    <!-- Define the header row -->
+  
     <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-    <!-- Define the data row -->
-    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+    <!-- Add click event here -->
+    <mat-row *matRowDef="let row; columns: columns" (click)="openEditDialog(row)" class="mat-row" style="cursor: pointer;"></mat-row>
   </mat-table>
-
+  
   <!-- Define the paginator with page size options -->
   <mat-paginator
     [length]="matTableDataSource.paginator?.length || 0"
